docs: vnode.elm

--- a/Vue源码/2.3-数据驱动-update方法.md
+++ b/Vue源码/2.3-数据驱动-update方法.md
@@ -66,13 +66,7 @@ function createPatchFunction (backend) {
     }
   }
 
-  function emptyNodeAt () {}
-  function createRmCb () {}
-  function removeNode () {}
-  function isUnknownElement () {}
-  function createElm () {}
-
-  // 其他function ...
+  // 定义了一系列辅助function ...
   /**
   *  if (!prevVnode) {
   *    // initial render
@@ -119,11 +113,10 @@ function createPatchFunction (backend) {
           oldVnode = emptyNodeAt(oldVnode)
         }
 
-        // replacing existing element
         const oldElm = oldVnode.elm
         const parentElm = nodeOps.parentNode(oldElm)
 
-        // 创建一个新的DOM节点
+        // 根据vnode创建DOM
         createElm(
           vnode,
           insertedVnodeQueue,
@@ -131,33 +124,7 @@ function createPatchFunction (backend) {
           nodeOps.nextSibling(oldElm)
         )
 
-        // update parent placeholder node element, recursively
-        if (isDef(vnode.parent)) {
-          let ancestor = vnode.parent
-          const patchable = isPatchable(vnode)
-          while (ancestor) {
-            for (let i = 0; i < cbs.destroy.length; ++i) {
-              cbs.destroy[i](ancestor)
-            }
-            ancestor.elm = vnode.elm
-            if (patchable) {
-              for (let i = 0; i < cbs.create.length; ++i) {
-                cbs.create[i](emptyNode, ancestor)
-              }
-              const insert = ancestor.data.hook.insert
-              if (insert.merged) {
-                for (let i = 1; i < insert.fns.length; i++) {
-                  insert.fns[i]()
-                }
-              }
-            } else {
-              registerRef(ancestor)
-            }
-            ancestor = ancestor.parent
-          }
-        }
-
-        // destroy old node
+        // 销毁oldVnode
         if (isDef(parentElm)) {
           removeVnodes(parentElm, [oldVnode], 0, 0)
         } else if (isDef(oldVnode.tag)) {
@@ -177,7 +144,7 @@ function createPatchFunction (backend) {
 - 浏览器端首次渲染`vnode`
 - 服务端渲染
 
-这里仅分析浏览器中首次渲染的逻辑，其他分支的逻辑在后续的模块中再分析，`vm.__patch__(vm.$el, vnode, hydrating, false)`将会走到这段逻辑中（上面的代码注释中已给出）：
+这里仅分析浏览器中首次渲染的逻辑，其他分支的逻辑在后续的模块中再分析，`vm.__patch__(vm.$el, vnode, hydrating, false)`将会走到这段逻辑中（上面的代码注释中已给出走位）：
 ```js
 createElm(vnode, insertedVnodeQueue, oldElm._leaveCb ? null : parentElm, nodeOps.nextSibling(oldElm))
 ```
@@ -195,7 +162,7 @@ function createElm (vnode, insertedVnodeQueue, parentElm, refElm, nested, ownerA
   const children = vnode.children
   const tag = vnode.tag
   if (isDef(tag)) {
-    // 根据vnode.tag创建对应的DOM元素，使vnode.elm指向它
+    // 根据vnode.tag创建对应的DOM元素来初始化使vnode.elm
     vnode.elm = vnode.ns ? nodeOps.createElementNS(vnode.ns, tag) : nodeOps.createElement(tag, vnode)
 
     // 设置样式的作用域
@@ -223,10 +190,10 @@ function createElm (vnode, insertedVnodeQueue, parentElm, refElm, nested, ownerA
 
 `createElm`分别做了以下工作：
 - 调用`createComponent`尝试创建子组件，这个方法将在组件化模块中分析
-- 根据`vnode.tag`创建对应的`DOM`元素（`nodeOps.createElement`），并使`vnode.elm`指向它
-- 调用`createChildren`创建子元素
+- 根据`vnode.tag`创建对应的`DOM`元素（`nodeOps.createElement`）来初始化`vnode.elm`
+- 调用`createChildren`创建子`vnode`对应的DOM
 - `invokeCreateHooks`执行钩子
-- 调用`insert`插入父节点
+- 调用`insert`将`node.elm`插入父节点
 
 #### 1. `createChildren`：
 ```js
@@ -234,7 +201,7 @@ function createChildren (vnode, children, insertedVnodeQueue) {
   if (Array.isArray(children)) {
     // 开发环境 检查key是否重复
     if (process.env.NODE_ENV !== 'production') checkDuplicateKeys(children)
-    // 遍历children 调用createElm创建子元素
+    // 遍历children 调用递归调用createElm创建子vnode对应的元素并插入vnode.elm
     for (let i = 0; i < children.length; ++i) {
       createElm(children[i], insertedVnodeQueue, vnode.elm, null, true, children, i)
     }
@@ -246,27 +213,12 @@ function createChildren (vnode, children, insertedVnodeQueue) {
 
 `createChildren`中遍历`children`：
 - 开发环境下检查`key`
-- 调用`createElm`方法创建各`vnode`对应的DOM
+- 递归调用`createElm`方法创建各`vnode`对应的DOM
 
-#### 2. invokeCreateHooks
-回到`createElm`流程中，`createChildren`创建`children`对应的子节点之后调用`invokeCreateHooks`执行所有的`create`钩子：
-```js
-function invokeCreateHooks (vnode, insertedVnodeQueue) {
-  for (let i = 0; i < cbs.create.length; ++i) {
-    cbs.create[i](emptyNode, vnode)
-  }
-  i = vnode.data.hook
-  if (isDef(i)) {
-    if (isDef(i.create)) i.create(emptyNode, vnode)
-    if (isDef(i.insert)) insertedVnodeQueue.push(vnode)
-  }
-}
-```
+递归直到`children`为空结束。
 
-把`vnode` push 进`insertedVnodeQueue`中。
-
-#### 3. insert
-最后通过`insert`方法把DOM插入到父节点中，由于是递归调用，子元素会优先调用`insert`，所以整个`vnode`树节点的插入顺序是先子后父：
+#### 2. insert
+`insert`方法把`vnode.elm`指向的DOM插入到父节点中：
 ```js
 function insert (parent, elm, ref) {
   if (isDef(parent)) {
@@ -281,13 +233,26 @@ function insert (parent, elm, ref) {
 }
 ```
 
-<!-- 在 createElm 过程中，如果 vnode 节点不包含 tag，则它有可能是一个注释或者纯文本节点，可以直接插入到父元素中。在我们这个例子中，最内层就是一个文本 vnode，它的 text 值取的就是之前的 this.message 的值 Hello Vue!。 -->
+由于是深度优先遍历，子`vnode`会优先调用`insert`，所以整个`vnode`树的插入顺序是先子后父。
 
-再次回到`patch`方法，在首次渲染时调用了`createElm`方法，传入的`parentElm`是`oldVnode.elm`的父元素，在上文中给出的例子它是`id`为 `#app`的父元素，也就是`Body`；实际上整个过程就是递归创建了一个完整的`DOM`树并插入到`Body`上。
+#### 3. invokeCreateHooks
+在`createElm`流程中，在将创建的DOM插入到父节点之前还有一个重要的步骤——`invokeCreateHooks`：
+```js
+function invokeCreateHooks (vnode, insertedVnodeQueue) {
+  for (let i = 0; i < cbs.create.length; ++i) {
+    cbs.create[i](emptyNode, vnode)
+  }
+  i = vnode.data.hook
+  if (isDef(i)) {
+    if (isDef(i.create)) i.create(emptyNode, vnode)
+    if (isDef(i.insert)) insertedVnodeQueue.push(vnode)
+  }
+}
+```
 
-最后，根据之前递归`createElm`生成的`vnode`插入顺序队列，执行相关的`insert`钩子函数，这部分内容之后会详细介绍。
+`invokeCreateHooks`依次执行的`cbs.create`数组上的钩子，这里主要是将`vnode.data`上的`style`、`class`、`attribute`、事件监听等绑定到DOM上。
 
 ### 总结
 ![Vue渲染过程](https://pic.downk.cc/item/5f51fcd3160a154a67796338.png)
 
-在这里只是分析了最简单的场景，在实际的开发中，我们是把页面拆分成很多组件的，这正是Vue的组件化思想。
+至此我们从主线上把`render`如何生成`vnode`、如何根据`vnode`创建DOM的过程分析完毕。本节分析了初始化`Vue`实例到渲染DOM的简单的场景，数据变化引起的`update`、组件生成`vnode`等过程还要在后续的代码分析中解答。
