--- a/Vue源码/2.3-数据驱动-update方法.md
+++ b/Vue源码/2.3-数据驱动-update方法.md
@@ -4,10 +4,10 @@
 Vue.prototype._update = function (vnode, hydrating) {
   const vm = this
   const prevEl = vm.$el
-  // 记录之前的vnode
+  // 前一次updata对应的vnode
   const prevVnode = vm._vnode
   const restoreActiveInstance = setActiveInstance(vm)
-  // 写_vnode
+  // 将update的vnode记录在vm._vnode上，供下一次_update取出使用
   vm._vnode = vnode
   if (!prevVnode) {
     // 首次渲染
@@ -109,7 +109,7 @@ function createPatchFunction (backend) {
             invokeInsertHook(vnode, insertedVnodeQueue, true)
             return oldVnode
           }
-          // 将oldVnode转为VNode类型对象
+          // 将oldVnode转为VNode类型对象，if(isRealElement)外的流程中oldVnode需要是VNode对象
           oldVnode = emptyNodeAt(oldVnode)
         }
 
