--- a/Vue源码/2.1-数据驱动-$mount方法.md
+++ b/Vue源码/2.1-数据驱动-$mount方法.md
@@ -20,7 +20,7 @@ Vue.prototype.$mount = function (el, hydrating) {
 可以看到，`$mount`实际上调用了`mountComponent`：
 ```js
 // src/core/instance/lifecycle.js
-function mountComponent (vm, el, hydrating) {
+function `mountComponent (vm, el, hydrating) {
   // 使用$el保存对组件模板元素的引用
   vm.$el = el
 
@@ -74,4 +74,4 @@ function mountComponent (vm, el, hydrating) {
 vm._update(vm._render())
 ```
 
-从而完成整个渲染工作——`vm._render`将实例转换为虚拟vnode，而`vm._update`将虚拟vnode渲染更新为真正的DOM。
+从而完成整个渲染工作——`vm._render`将实例转换为虚拟`vnode`，而`vm._update`将虚拟`vnode`渲染更新为真正的DOM。
