--- a/Vue源码/3.1-组件化-createComponent.md
+++ b/Vue源码/3.1-组件化-createComponent.md
@@ -1,27 +1,32 @@
-之前分析过的`createElement`方法，最终是通过调用`_createElement`方法实现的。在`_createElement`方法内部，有这样一段逻辑：
+Vue.js的另一个核心思想就是组件化，接下来我们将分析Vue组件的原理。
+
+同样的，Vue组件要渲染到页面中去，也需要经历将组件转为`vnode`、`vnode`转为DOM的过程，本节将分析如何将组件转换为对应的`vnode`。
+
+如果还有印象，之前分析的用于创建`vnode`的`createElement`方法，在规范化`children`之后创建`vnode`时有这样一段逻辑：
 ```js
-if (typeof tag === 'string') {
-  let Ctor
-  ns = (context.$vnode && context.$vnode.ns) || config.getTagNamespace(tag)
-  if (config.isReservedTag(tag)) {
-    vnode = new VNode(
-      config.parsePlatformTagName(tag), data, children,
-      undefined, undefined, context
-    )
-  } else if ((!data || !data.pre) && isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
-    vnode = createComponent(Ctor, data, context, children, tag)
+function _createElement (context, tag, data, children, normalizationType) {
+  // 规范化children
+
+  // 创建vnode
+  let vnode, ns
+  if (typeof tag === 'string') {
+    let Ctor
+    if (config.isReservedTag(tag)) {
+      vnode = new VNode(config.parsePlatformTagName(tag), data, children, undefined, undefined, context)
+    } else if ((!data || !data.pre) && isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
+      vnode = createComponent(Ctor, data, context, children, tag)
+    } else {
+      vnode = new VNode(tag, data, children, undefined, undefined, context)
+    }
   } else {
-    vnode = new VNode(
-      tag, data, children,
-      undefined, undefined, context
-    )
+    // 组件vnode
+    vnode = createComponent(tag, data, context, children)
   }
-} else {
-  vnode = createComponent(tag, data, context, children)
+  return vnode
 }
 ```
 
-这里是对`tag`参数做了判断——如果是一个普通的HTML标签，则会创建一个普通的`VNode`节点；否则通过`createComponent`创建一个组件类型的`VNode`。对于以下面这种方式初始化Vue实例：
+对于以如下方式实例化Vue：
 ```js
 import Vue from 'vue'
 import App from './App.vue'
@@ -32,19 +37,21 @@ var app = new Vue({
 })
 ```
 
-显然会走到`_createElement`方法的通过`createComponent`创建`VNode`实例逻辑中去。下面我们来分析`createComponent`方法的实现：
+因为这里传入的是一个`App`对象：
 
+![App](https://pic.downk.cc/item/5f57ac87160a154a67bb9b49.jpg)
+
+所以`_createElement`内的逻辑会走到`createComponent(tag, data, context, children)`逻辑中去：
 ```js
 // src/core/vdom/create-component.js
 function createComponent (Ctor, data, context, children, tag) {
-  if (isUndef(Ctor)) return
-
+  // options._base为Vue方法
   const baseCtor = context.$options._base
 
-  // plain options object: turn it into a constructor
+  // 创建组件构造函数
   if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
 
-  // async component
+  // 异步组件
   let asyncFactory
   if (isUndef(Ctor.cid)) {
     asyncFactory = Ctor
@@ -54,39 +61,10 @@ function createComponent (Ctor, data, context, children, tag) {
 
   data = data || {}
 
-  // resolve constructor options in case global mixins are applied after
-  // component constructor creation
-  resolveConstructorOptions(Ctor)
-
-  // transform component v-model data into props & events
-  if (isDef(data.model)) transformModel(Ctor.options, data)
-
-  // extract props
-  const propsData = extractPropsFromVNodeData(data, Ctor, tag)
-
-  // functional component
-  if (isTrue(Ctor.options.functional)) return createFunctionalComponent(Ctor, propsData, data, context, children)
-
-  // extract listeners, since these needs to be treated as
-  // child component listeners instead of DOM listeners
-  const listeners = data.on
-  // replace with listeners with .native modifier
-  // so it gets processed during parent component patch.
-  data.on = data.nativeOn
-
-  if (isTrue(Ctor.options.abstract)) {
-    // abstract components do not keep anything
-    // other than props & listeners & slot
-    // work around flow
-    const slot = data.slot
-    data = {}
-    if (slot) data.slot = slot
-  }
-
-  // install component management hooks onto the placeholder node
+  // 安装组件钩子函数
   installComponentHooks(data)
 
-  // return a placeholder vnode
+  // 创建vnode
   const name = Ctor.options.name || tag
   const vnode = new VNode(
     `vue-component-${Ctor.cid}${name ? `-${name}` : ''}`,
