--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -29,7 +29,7 @@ renderMixin(Vue)
 其中，`initMixin(Vue)`在`Vue`原型上挂载了`_init`方法：
 ```js
 function initMixin (Vue) {
-  Vue.prototype._init = function (options?: Object) {
+  Vue.prototype._init = function (options) {
     const vm = this
     // 每个Vue实例都会有一个递增唯一的id标识
     vm._uid = uid++
@@ -43,7 +43,7 @@ function initMixin (Vue) {
       // 因为动态选项合并非常慢，而且没有一个内部组件选项，需要特殊处理?
       initInternalComponent(vm, options)
     } else {
-      // 根实例的$options处理
+      // 合并options给vm.$options
       vm.$options = mergeOptions(
         resolveConstructorOptions(vm.constructor),
         options || {},
@@ -51,13 +51,10 @@ function initMixin (Vue) {
       )
     }
 
-    if (process.env.NODE_ENV !== 'production') {
-      // 在非生产环境下设置渲染函数的作用域代理，其目的是在开发阶段提供良好的提示信息（如在模板内访问实例上不存在的属性，则会给出准确的报错信息）
-      initProxy(vm)
-    } else {
-      // 生产环境中，vm._renderProxy 是实例本身
-      vm._renderProxy = vm
-    }
+    // 在非生产环境下设置渲染函数的作用域代理，其目的是在开发阶段提供良好的提示信息（如在模板内访问实例上不存在的属性，则会给出准确的报错信息）
+    // 生产环境中，vm._renderProxy指向实例本身
+    if (process.env.NODE_ENV !== 'production') initProxy(vm)
+    else vm._renderProxy = vm
   
     vm._self = vm
 
