docs: add comments on createComponent

--- a/Vue源码/3.1-组件化-createComponent.md
+++ b/Vue源码/3.1-组件化-createComponent.md
@@ -1,4 +1,4 @@
-Vue.js的另一个核心思想就是组件化，接下来我们将分析Vue组件的原理。
+在数据驱动之外，Vue.js的另一个核心思想就是组件系统，接下来我们将分析Vue组件的原理。
 
 同样的，Vue组件要渲染到页面中去，也需要经历将组件转为`vnode`、`vnode`转为DOM的过程，本节将分析如何将组件转换为对应的`vnode`。
 
@@ -45,7 +45,7 @@ var app = new Vue({
 ```js
 // src/core/vdom/create-component.js
 function createComponent (Ctor, data, context, children, tag) {
-  // options._base为Vue方法
+  // $options._base为Vue
   const baseCtor = context.$options._base
 
   // 创建组件构造函数
@@ -61,6 +61,13 @@ function createComponent (Ctor, data, context, children, tag) {
 
   data = data || {}
 
+  // 将v-model转为props
+  if (isDef(data.model)) transformModel(Ctor.options, data)
+    
+  // 事件监听的处理
+  var listeners = data.on
+  data.on = data.nativeOn
+
   // 安装组件钩子函数
   installComponentHooks(data)
 
@@ -75,3 +82,15 @@ function createComponent (Ctor, data, context, children, tag) {
   return vnode
 }
 ```
+
+在这里，我们更关心这三处核心逻辑：
+- 创建组件构造函数
+- 安装组件钩子函数
+- 创建组件`vnode`
+
+### 1. baseCtor.extend(Ctor)
+
+### 2. installComponentHooks
+
+### 3. 创建组件vnode
+
