docs: Vue.extend

--- a/Vue源码/3.1-组件化-createComponent.md
+++ b/Vue源码/3.1-组件化-createComponent.md
@@ -37,18 +37,17 @@ var app = new Vue({
 })
 ```
 
-因为这里传入的是一个`App`对象：
+`_createElement`这里传入的`tag`对应的是一个`App`对象：
 
 ![App](https://pic.downk.cc/item/5f57ac87160a154a67bb9b49.jpg)
 
-所以`_createElement`内的逻辑会走到`createComponent(tag, data, context, children)`逻辑中去：
+所以这里的逻辑会走到`createComponent(tag, data, context, children)`逻辑中去：
 ```js
 // src/core/vdom/create-component.js
 function createComponent (Ctor, data, context, children, tag) {
-  // $options._base为Vue
+  // 根实例context.$options._base为Vue
   const baseCtor = context.$options._base
-
-  // 创建组件构造函数
+  // 根据Ctor创建对应的组件构造函数
   if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
 
   // 异步组件
@@ -88,9 +87,77 @@ function createComponent (Ctor, data, context, children, tag) {
 - 安装组件钩子函数
 - 创建组件`vnode`
 
-### 1. baseCtor.extend(Ctor)
+### 1. 构造组件构造函数
+```js
+const baseCtor = context.$options._base
+
+if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
+```
+
+对于上文提到初始化根实例`vm`的方式，`context.$options._base`指向构造函数`Vue`（$options的合并在3.3小节会讲到，这里先记住）。`Vue.extend(Ctor)`基于`Ctor`构造一个`Vue`的子类：
+```js
+// src/core/global-api/extend.js
+Vue.extend = function (extendOptions) {
+  extendOptions = extendOptions || {}
+  const Super = this
+  const SuperId = Super.cid
+
+  // 缓存基于该父类创建的子类
+  const cachedCtors = extendOptions._Ctor || (extendOptions._Ctor = {})
+  if (cachedCtors[SuperId]) return cachedCtors[SuperId]
+    
+  const name = extendOptions.name || Super.options.name
+
+  // 定义子类构造函数
+  const Sub = function VueComponent (options) {
+    this._init(options)
+  }
+  // 继承父类原型
+  Sub.prototype = Object.create(Super.prototype)
+  Sub.prototype.constructor = Sub
+  Sub.cid = cid++
+  // 合并父类的静态属性 options 和 传入的 extendOptions，形成子类的静态属性 options
+  Sub.options = mergeOptions(
+    Super.options,
+    extendOptions
+  )
+  // 将子类的静态属性super指向父类
+  Sub['super'] = Super
+
+  // 通过Vue.extend得到的子类构造函数如SubVue创建的实例组件，组件对所有继承而来的共有的prop的访问将挂载在SubVue.prototype上，而SubVue.prototype定义的访问器属性最终拿到的是实例的this._props[key]
+  // 因此，通过将组件继承而来的共有prop挂载在原型链上，而仅在vm上挂载组件特有的prop。这样的设计，优化了对共有prop的访问性能
+
+  // 在 Sub.prototype 上添加 props 和 computed 的便捷访问
+  if (Sub.options.props) initProps(Sub)
+  if (Sub.options.computed) initComputed(Sub)
+
+  // 继承父类的静态方法
+  Sub.extend = Super.extend
+  Sub.mixin = Super.mixin
+  Sub.use = Super.use
+
+  // 继承父类的静态资源方法component/directive/filter，用于注册全局的组件、指令、过滤器
+  ASSET_TYPES.forEach(function (type) {
+    Sub[type] = Super[type]
+  })
+
+  // 将子类自身注册为局部组件
+  if (name) Sub.options.components[name] = Sub
+
+  // 保持在继承时对父类Super.options的引用，以便于在之后实例化时检查Super.options是否更新过
+  Sub.superOptions = Super.options
+  Sub.extendOptions = extendOptions
+  Sub.sealedOptions = extend({}, Sub.options)
+
+  // 缓存基于该父类创建的子类构造器
+  cachedCtors[SuperId] = Sub
+  return Sub
+}
+```
+
 
 ### 2. installComponentHooks
+
 
 ### 3. 创建组件vnode
 
