docs: init方法的挂载和执行时机

--- a/Vue源码/2.1-数据驱动-$mount方法.md
+++ b/Vue源码/2.1-数据驱动-$mount方法.md
@@ -20,7 +20,7 @@ Vue.prototype.$mount = function (el, hydrating) {
 可以看到，`$mount`实际上调用了`mountComponent`：
 ```js
 // src/core/instance/lifecycle.js
-function `mountComponent (vm, el, hydrating) {
+function mountComponent (vm, el, hydrating) {
   // 使用$el保存对组件模板元素的引用
   vm.$el = el
 
@@ -62,11 +62,11 @@ function `mountComponent (vm, el, hydrating) {
 - 初始化watcher时
 - 监测到vm实例中数据发生变化时
 
-关于`vm._update(vm._render())`：
-- `vm.render`用于生成`vnode`
-- `vm._update`用于将`vnode`渲染成真正的DOM
+其中`vm._update(vm._render())`：
+- `vm._render`用于生成`vnode`
+- `vm._update`将`vnode`渲染为真正的DOM
 
-关于`vm._update`、`vm.render`、`Watcher`的实现仍要待后续解答。
+关于`vm._update`、`vm._render`、`Watcher`的实现细节仍要待后续解答。
 
 ### 总结
 `$mount`方法本质上依靠`mountComponent`，而`mountComponent`通过实例化一个`Watcher`，在其监听数据变化的回调中通过执行：
