--- a/Vue源码/3.1-组件化-createComponent.md
+++ b/Vue源码/3.1-组件化-createComponent.md
@@ -26,7 +26,7 @@ function _createElement (context, tag, data, children, normalizationType) {
 }
 ```
 
-对于以如下方式实例化Vue：
+对于以如下方式实例化Vue实例：
 ```js
 import Vue from 'vue'
 import App from './App.vue'
