--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -26,7 +26,7 @@ renderMixin(Vue)
 读到`function Vue () {}`的时候不免会想这样一个问题——Vue的定义为什么不以ES6 Class的形式去实现？从接下来的一系列`mixin(Vue)`操作可以看出来——Vue按功能的实现把它们分散到多个模块中，以操作原型对象的方式补充进去，有利于Vue的维护升级，这是用Class无法做到的。
 
 ### _init(Vue)做了什么
-其中，`initMixin(Vue)`在`Vue`原型上挂载了`_init`方法：
+`_init`方法是在`initMixin(Vue)`执行时被挂载到`Vue`原型对象上的：
 ```js
 function initMixin (Vue) {
   Vue.prototype._init = function (options) {
@@ -95,6 +95,6 @@ function initMixin (Vue) {
 - 初始化data、props、computed、watcher等
 - 最后，通过`$mount`方法挂载`Vue`实例，从而做到将模板+数据渲染成为最终的`DOM`。
 
-回头再看一遍，这里的`_init`方法是在`initMixin(Vue)`执行时挂载到`Vue`原型上去的，`_init`方法在实例化`Vue`对象时得以执行。
+回头再看一遍，这里的`_init`方法是在`initMixin(Vue)`执行时挂载到`Vue`原型对象上去的，`_init`方法在实例化`Vue`对象时得以执行。
 
 至此，`Vue`构造器的定义大致分析结束，`Vue`本质上就是一个用`Function`实现的`Class`，Vue.js按功能在各模块中拓展了`Vue`原型及`Vue`对象本身的属性及方法，具体的功能拓展在后文中分析。
