--- a/Vue源码/2.2-数据驱动-vnode和render方法.md
+++ b/Vue源码/2.2-数据驱动-vnode和render方法.md
@@ -1,11 +1,11 @@
-上一节讲到`_render`方法用于将实例转换为`vnode`对象，`_update`将生成的`vnode`渲染成真实的DOM。本文分析`vnode`的生成。
+上一节提到`_render`方法用于将实例转换为`vnode`对象，`_update`将生成的`vnode`渲染成真实的DOM。本文分析`vnode`的生成。
 
-首先，要先搞明白`vnode`是什么。
+在此之前，我们先来搞明白`vnode`是什么。
 
 ### 1.vnode是什么
 由于浏览器标准把真实DOM设计得非常复杂，频繁地更新DOM会产生性能问题，`virtual DOM`也就有了舞台——虚拟DOM是用于描述DOM节点的原生JavaScript对象。
 
-在Vue.js中，`virtual DOM`是用`vnode`描述的：
+而在Vue.js中，`vnode`就是用来描述`virtual DOM`的：
 ```js
 // src/core/vdom/vnode.js
 class VNode {
