--- a/Vue源码/2.3-数据驱动-update方法.md
+++ b/Vue源码/2.3-数据驱动-update方法.md
@@ -42,7 +42,7 @@ const modules = platformModules.concat(baseModules)
 const patch = createPatchFunction({ nodeOps, modules })
 ```
 
-可以看到，`patch`方法是`createPatchFunction`方法生成的，这里传入了两个参数：
+可以看到，`patch`方法是由`createPatchFunction`方法生成的，这里传入了两个参数：
 - `nodeOps`：封装了一系列`DOM`操作的方法，如创建、插入、移除等
 - `modules`：创建真实DOM也需要生成它的class/attrs/style等属性，modules是一个数组集合，数组的每一项都是这些属性对应的钩子方法，这些属性的创建、更新、销毁等都有对应钩子方法。比如它们都有create这个钩子方法，如将这些create钩子收集到一个数组内，需要在真实DOM上创建这些属性时，依次执行数组的每一项，也就是依次创建了它们。
 
@@ -67,7 +67,8 @@ function createPatchFunction (backend) {
   }
 
   // 定义了一系列辅助function ...
-  /**
+
+  /** patch方法的调用形式
   *  if (!prevVnode) {
   *    // initial render
   *    vm.$el = vm.__patch__(vm.$el, vnode, hydrating, false)
@@ -77,7 +78,7 @@ function createPatchFunction (backend) {
   *  }
   */
   return function patch (oldVnode, vnode, hydrating, removeOnly) {
-    // 从上面patch方法的调用可知:
+    // 从上面给出的patch方法的调用形式可知:
     // 初次渲染时，oldVnode = vm.$el；更新时，oldVnode = prevVnode
     if (isUndef(vnode)) {
       // 如果新的vnode不存在，销毁oldVnode
