--- a/Vue源码/3.1-组件化-创建组件vnode的createComponent方法.md
+++ b/Vue源码/3.1-组件化-创建组件vnode的createComponent方法.md
@@ -5,7 +5,7 @@
 如果还有印象，之前分析的用于创建`vnode`的`createElement`方法，在规范化`children`之后创建`vnode`时有这样一段逻辑：
 ```js
 function _createElement (context, tag, data, children, normalizationType) {
-  // 规范化children
+  // 规范化children逻辑
 
   // 创建vnode
   let vnode, ns
