dcos: createComponent-installComponentHooks

--- a/Vue源码/3.1-组件化-createComponent.md
+++ b/Vue源码/3.1-组件化-createComponent.md
@@ -155,9 +155,77 @@ Vue.extend = function (extendOptions) {
 }
 ```
 
+`Vue.extend`的作用就是构造一个`Vue`的子类，它把一个纯对象转换一个继承于`Vue`的构造器`Sub`并返回，然后对`Sub`这个对象本身扩展了一些属性，如扩展`options`、添加全局API等；并且对配置中的`props`和`computed`做了初始化工作；最后对于这个`Sub`构造函数做了缓存，避免多次执行`Vue.extend`的时候对同一个子组件进行重复构造。
 
 ### 2. installComponentHooks
+```js
+const componentVNodeHooks = {
+  init (vnode, hydrating) {
+    if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
+      const mountedNode = vnode
+      componentVNodeHooks.prepatch(mountedNode, mountedNode)
+    } else {
+      const child = vnode.componentInstance = createComponentInstanceForVnode(
+        vnode,
+        activeInstance
+      )
+      child.$mount(hydrating ? vnode.elm : undefined, hydrating)
+    }
+  },
 
+  prepatch (oldVnode, vnode) {
+    const options = vnode.componentOptions
+    const child = vnode.componentInstance = oldVnode.componentInstance
+    updateChildComponent(
+      child,
+      options.propsData, // updated props
+      options.listeners, // updated listeners
+      vnode, // new parent vnode
+      options.children // new children
+    )
+  },
+
+  insert (vnode) {
+    const { context, componentInstance } = vnode
+    if (!componentInstance._isMounted) {
+      componentInstance._isMounted = true
+      callHook(componentInstance, 'mounted')
+    }
+    if (vnode.data.keepAlive) {
+      if (context._isMounted) {
+        queueActivatedComponent(componentInstance)
+      } else {
+        activateChildComponent(componentInstance, true)
+      }
+    }
+  },
+
+  destroy (vnode) {
+    const { componentInstance } = vnode
+    if (!componentInstance._isDestroyed) {
+      if (!vnode.data.keepAlive) {
+        componentInstance.$destroy()
+      } else {
+        deactivateChildComponent(componentInstance, true)
+      }
+    }
+  }
+}
+
+const hooksToMerge = Object.keys(componentVNodeHooks)
+
+function installComponentHooks (data) {
+  const hooks = data.hook || (data.hook = {})
+  for (let i = 0; i < hooksToMerge.length; i++) {
+    const key = hooksToMerge[i]
+    const existing = hooks[key]
+    const toMerge = componentVNodeHooks[key]
+    if (existing !== toMerge && !(existing && existing._merged)) {
+      hooks[key] = existing ? mergeHook(toMerge, existing) : toMerge
+    }
+  }
+}
+```
 
 ### 3. 创建组件vnode
 
