docs: patch-createComponent

--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -1,6 +1,6 @@
-创建组件对应的vnode的`createComponent`方法在前一章节已经分析过，与普通vnode一样，接下来的步骤是执行`vm._update`——将vnode转化为真实DOM。
+创建组件对应的vnode在前一章节已经分析过，创建完vnode接下来的步骤是执行`vm._update`——将vnode转化为真实DOM。
 
-回顾`2.3`小节，在分析`update`内部调用的`createElm`方法(`vm._update -> vm.__patch__ -> createPatchFunction -> patch -> createElm`)内部逻辑，第一步就是尝试处理组件vnode：
+回顾`2.3`小节，在分析`update`内部调用的`createElm`方法(`vm._update -> vm.__patch__ -> createPatchFunction -> patch -> createElm`)的内部逻辑中，第一步就是尝试处理组件vnode：
 ```js
 function createElm () {
   // 组件vnode
@@ -10,5 +10,26 @@ function createElm () {
   const data = vnode.data
   const children = vnode.children
   // ...
+}
+```
+
+`createComponent`：
+```js
+function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
+  let i = vnode.data
+  if (isDef(i)) {
+    if (isDef(i = i.hook) && isDef(i = i.init)) {
+      i(vnode, false)
+    }
+    if (isDef(vnode.componentInstance)) {
+      const isReactivated = i.keepAlive
+      initComponent(vnode, insertedVnodeQueue)
+      insert(parentElm, vnode.elm, refElm)
+      if (isTrue(isReactivated)) {
+        reactivateComponent(vnode, insertedVnodeQueue, parentElm, refElm)
+      }
+      return true
+    }
+  }
 }
 ```
