docs: 组件 update

--- a/Vue源码/3.1-组件化-创建组件vnode的render方法.md
+++ b/Vue源码/3.1-组件化-创建组件vnode的render方法.md
@@ -160,6 +160,7 @@ Vue.extend = function (extendOptions) {
 ### 2. installComponentHooks
 ```js
 const componentVNodeHooks = {
+  // 根据组件vnode创建对应的的DOM时触发 
   init (vnode, hydrating) {
     if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
       const mountedNode = vnode
