--- a/Vue源码/2.3-数据驱动-update方法.md
+++ b/Vue源码/2.3-数据驱动-update方法.md
@@ -90,10 +90,11 @@ function createPatchFunction (backend) {
     const insertedVnodeQueue = []
 
     if (isUndef(oldVnode)) {
-      // 如果oldVnode空，直接生成新的？对应那种情况？
+      // 如果oldVnode空，直接生成新的，对应初次渲染
       isInitialPatch = true
       createElm(vnode, insertedVnodeQueue)
     } else {
+      // 非初次渲染，更新DOM
       const isRealElement = isDef(oldVnode.nodeType)
       if (!isRealElement && sameVnode(oldVnode, vnode)) {
         // diff算法，新旧vnode比对
@@ -190,7 +191,7 @@ function createElm (vnode, insertedVnodeQueue, parentElm, refElm, nested, ownerA
 ```
 
 `createElm`分别做了以下工作：
-- 调用`createComponent`尝试创建子组件，这个方法将在组件化模块中分析
+- 调用`createComponent`尝试将以组件vnode更新DOM，这个方法将在组件化模块中分析
 - 根据`vnode.tag`创建对应的`DOM`元素（`nodeOps.createElement`）来初始化`vnode.elm`
 - 调用`createChildren`创建子`vnode`对应的DOM
 - `invokeCreateHooks`执行钩子
