--- a/Vue源码/2.2-数据驱动-vnode和render方法.md
+++ b/Vue源码/2.2-数据驱动-vnode和render方法.md
@@ -33,7 +33,7 @@ class VNode {
 `vnode`的生成看起来很简单——只要通过调用`new VNode()`并提供一系列初始化数据，接下来是我们在之前提到过的用于生成`vnode`的`_render`方法。
 
 ### 2.生成vnode的_render方法
-`_render`是实例的私有方法，它在执行`renderMixin(Vue)`时被挂载到`Vue`原型上：
+`_render`是实例的私有方法，它在`renderMixin(Vue)`执行时被挂载到`Vue`原型上，这一步是在构建平台确定时就已经确定的：
 ```js
 // src/core/instance/render.js
 Vue.prototype._render = function () {
@@ -52,27 +52,21 @@ Vue.prototype._render = function () {
 }
 ```
 
-这里：
+这里的：
 ```js
 let vnode = render.call(vm._renderProxy, vm.$createElement)
 ```
 
-又涉及到两个重要的方法——`render`和`$createElement`。
+又涉及到两个重要的方法——`render`和`$createElement`：
 
 `render`来源于`options`：它可能是开发者手写的`render`，也可能是由`template`编译成的`render`。由模板生成`render`的case，在后面的分析中会单独做介绍，在这里暂讨论手写`render`的情况。
 
-Vue.js的官方文档中介绍了手写`render`函数提供的第一个参数是`createElement`：
+至于`vm.$createElement`，与Vue.js的官方文档中介绍的手写`render`函数提供的参数`createElement`：
 ![render](https://pic.downk.cc/item/5f549704160a154a670e7a4e.jpg)
 
-将它与`_render`方法内的：
-```js
-const { render } = vm.$options
-vnode = render.call(vm._renderProxy, vm.$createElement)
-```
+做比较，即可发现手写`render`方法中提供的`createElement`对应的正是`vm.$createElement`方法。
 
-做一下比较，即可发现手写`render`方法中提供的`createElement`对应的正是`vm.$createElement`方法。
-
-而`$createElement`是在`_init(vm)`阶段通过`initRender(vm)`定义在实例上的：
+而`$createElement`是在`_init(vm)`阶段（创建Vue实例时）执行`initRender(vm)`时定义在实例上的：
 ```js
 // src/core/instance/render.js
 import { createElement } from '../vdom/create-element'
@@ -114,6 +108,7 @@ function _createElement (context, tag, data, children, normalizationType) {
     if (config.isReservedTag(tag)) {
       vnode = new VNode(config.parsePlatformTagName(tag), data, children, undefined, undefined, context)
     } else if ((!data || !data.pre) && isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
+      // 组件vnode
       vnode = createComponent(Ctor, data, context, children, tag)
     } else {
       vnode = new VNode(tag, data, children, undefined, undefined, context)
@@ -167,7 +162,7 @@ function simpleNormalizeChildren (children) {
 }
 ```
 
-`normalizeChildren`方法定义如下：
+`normalizeArrayChildren`方法定义如下：
 ```js
 function normalizeArrayChildren (children, nestedIndex) {
   const res = []
@@ -219,10 +214,10 @@ function normalizeArrayChildren (children, nestedIndex) {
 这里的`children`将会被处理为：
 ![children规范化](https://pic.downk.cc/item/5f54982d160a154a670ec053.jpg)
 
-总之，经过child对`children`的规划化处理之后，`children`的每一项都为`VNode`类型。
+可以看到，`"嘿嘿"`和`"第二个"`两个文本节点被合并为一个vnode。总之，经过对`children`的规划化处理之后，`children`的每一项都为`VNode`类型对象。
 
 #### 2.2 vnode的创建
-回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作是创建`vnode`实例：
+回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作就是创建`vnode`实例了：
 ```js
 let vnode
 if (typeof tag === 'string') {
@@ -247,7 +242,6 @@ if (typeof tag === 'string') {
 ![vnode](https://pic.downk.cc/item/5f549939160a154a670ef6d7.jpg)
 
 ### 总结
-我们大致了解了`_render`方法创建`vnode`的过程，每个`vnode`都有`children`，`children`的每个元素也是一个`vnode`，这样就形成了一个`VNode Tree`，它可以简单的描述对应的`DOM Tree`。
+至此，我们大致了解了`_render`方法创建`vnode`的过程。每个`vnode`都有`children`，而`children`的每个元素又是一个`vnode`，这样就形成了一个`VNode Tree`，它可以简单的描述对应的`DOM Tree`。
 
-接下来将分析如何把这个`vnode`渲染成一个真实的`DOM`——`update(vnode)`。
-
+接下来将分析把这个`vnode`渲染成真实的`DOM`的过程——`vm._update(vnode)`。
