--- a/Vue源码/3.1-组件化-创建组件vnode的render方法.md
+++ b/Vue源码/3.1-组件化-创建组件vnode的render方法.md
@@ -14,6 +14,7 @@ function _createElement (context, tag, data, children, normalizationType) {
     if (config.isReservedTag(tag)) {
       vnode = new VNode(config.parsePlatformTagName(tag), data, children, undefined, undefined, context)
     } else if ((!data || !data.pre) && isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
+      // 组件vnode
       vnode = createComponent(Ctor, data, context, children, tag)
     } else {
       vnode = new VNode(tag, data, children, undefined, undefined, context)
@@ -160,7 +161,7 @@ Vue.extend = function (extendOptions) {
 ### 2. installComponentHooks
 ```js
 const componentVNodeHooks = {
-  // 根据组件vnode创建对应的的DOM时触发 
+  // 组件vnode做patch时触发 
   init (vnode, hydrating) {
     if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
       const mountedNode = vnode
@@ -221,6 +222,7 @@ function installComponentHooks (data) {
     const key = hooksToMerge[i]
     const existing = hooks[key]
     const toMerge = componentVNodeHooks[key]
+    // 在组件vnode的data上安装钩子函数
     if (existing !== toMerge && !(existing && existing._merged)) {
       hooks[key] = existing ? mergeHook(toMerge, existing) : toMerge
     }
@@ -228,5 +230,24 @@ function installComponentHooks (data) {
 }
 ```
 
-### 3. 创建组件vnode
+整个`installComponentHooks`的过程就是把`componentVNodeHook`中的钩子合并到组件vnode的`data.hook`中，这些钩子函数将在组件vnode执行`patch`操作时被调用，具体的钩子执行会在组件`patch`过程中分析。
 
+### 3. 创建组件vnode
+```js
+var vnode = new VNode(
+  ("vue-component-" + (Ctor.cid) + (name ? ("-" + name) : '')),
+  data, undefined, undefined, undefined, context,
+  { Ctor: Ctor, propsData: propsData, listeners: listeners, tag: tag, children: children },
+  asyncFactory
+)
+```
+
+在组件构造函数`Ctor`、`data.hook`处理完后就是创建组件vnode了，通过构造函数`VNode`实例化一个vnode并返回。要注意的是与普通元素节点vnode不同，组件的vnode是没有`children`的，这点很关键。
+
+### 总结
+`createComponent`生成一个组件vnode涉及3个关键逻辑：
+- 构造子类构造函数
+- 安装组件钩子函数
+- 实例化 vnode
+
+与普通元素节点的vnode一样，组件vnode创建完后也会走到`vm._update`更新与之相对应的DOM逻辑中去，进而执行了`patch`，在前一小节已经对`_update`中的`patch`方法做了简单的分析，其中关于组件的`patch`会在下一小节中分析。
