--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -1,4 +1,4 @@
-创建组件对应的vnode在前一章节已经分析过，创建完vnode接下来的步骤是执行`vm._update`——将vnode转化为真实DOM。
+创建完vnode接下来的步骤是`vm._update`——将vnode转化为真实DOM。
 
 回顾`2.3`小节，在分析`update`内部调用的`createElm`方法(`vm._update -> vm.__patch__ -> createPatchFunction -> patch -> createElm`)的内部逻辑中，第一步就是尝试处理组件vnode：
 ```js
@@ -13,7 +13,7 @@ function createElm () {
 }
 ```
 
-`createComponent`：
+当时跳过了组件`patch`的`createComponent`的分析：
 ```js
 function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
   let i = vnode.data
@@ -35,7 +35,7 @@ function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
 }
 ```
 
-组件类型的vnode会满足`createComponent`内的条件，回顾上一节创建组件vnode时安装组件钩子函数的逻辑：
+在这里，由于组件类型的vnode会满足，
 ```js
 function createComponentInstanceForVnode (vnode, parent) {
   var options = {
@@ -70,6 +70,8 @@ const componentVNodeHooks = {
   insert () {},
   destroy () {}
 }
+
+var hooksToMerge = Object.keys(componentVNodeHooks)
 
 function installComponentHooks (data) {
   const hooks = data.hook || (data.hook = {})
