docs: 组件vnode init钩子

--- a/Vue源码/3.1-组件化-创建组件vnode的render方法.md
+++ b/Vue源码/3.1-组件化-创建组件vnode的render方法.md
@@ -59,6 +59,7 @@ function createComponent (Ctor, data, context, children, tag) {
     if (Ctor === undefined) return createAsyncPlaceholder(asyncFactory, data, context, children, tag)
   }
 
+  // 组件vnode一定会有data属性
   data = data || {}
 
   // 将v-model转为props
@@ -161,7 +162,7 @@ Vue.extend = function (extendOptions) {
 ### 2. installComponentHooks
 ```js
 const componentVNodeHooks = {
-  // 组件vnode做patch时触发 
+  // 非keepAlive组件patch时触发 
   init (vnode, hydrating) {
     if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
       const mountedNode = vnode
@@ -175,6 +176,7 @@ const componentVNodeHooks = {
     }
   },
 
+  // keepAlive组件patch时触发
   prepatch (oldVnode, vnode) {
     const options = vnode.componentOptions
     const child = vnode.componentInstance = oldVnode.componentInstance
@@ -242,7 +244,7 @@ var vnode = new VNode(
 )
 ```
 
-在组件构造函数`Ctor`、`data.hook`处理完后就是创建组件vnode了，通过构造函数`VNode`实例化一个vnode并返回。要注意的是与普通元素节点vnode不同，组件的vnode是没有`children`的，这点很关键。
+在组件构造函数`Ctor`、`data.hook`处理完后就是创建组件vnode了，通过构造函数`VNode`实例化一个vnode并返回。要注意的是与普通元素节点vnode不同，**组件vnode是没有`children`的**，这点很关键。
 
 ### 总结
 `createComponent`生成一个组件vnode涉及3个关键逻辑：
