--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -13,9 +13,10 @@ function createElm () {
 }
 ```
 
-当时跳过了组件`patch`的`createComponent`的分析：
+当时跳过了对于组件的`patch`逻辑的分析：
 ```js
 function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
+  // 组件vnode.data不为空
   let i = vnode.data
   if (isDef(i)) {
     if (isDef(i = i.hook) && isDef(i = i.init)) {
@@ -35,7 +36,23 @@ function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
 }
 ```
 
-在这里，由于组件类型的vnode会满足，
+在这里，组件类型的vnode在被创建时安装的`init`钩子可以得到执行：
+```js 
+function init (vnode, hydrating) {
+  if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
+    const mountedNode = vnode
+    componentVNodeHooks.prepatch(mountedNode, mountedNode)
+  } else {
+    const child = vnode.componentInstance = createComponentInstanceForVnode(
+      vnode,
+      activeInstance
+    )
+    child.$mount(hydrating ? vnode.elm : undefined, hydrating)
+  }
+}
+```
+
+`init`钩子的内部逻辑很简单：`keepAlive`组件通过执行`prepatch`钩子（这里不做展开），而对于普通的组件vnode，通过`createComponentInstanceForVnode`创建一个**对应的Vue实例**：
 ```js
 function createComponentInstanceForVnode (vnode, parent) {
   var options = {
@@ -50,38 +67,6 @@ function createComponentInstanceForVnode (vnode, parent) {
   }
   return new vnode.componentOptions.Ctor(options)
 }
-
-const componentVNodeHooks = {
-  // 根据组件vnode创建对应的的DOM时触发 
-  init (vnode, hydrating) {
-    if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
-      const mountedNode = vnode
-      componentVNodeHooks.prepatch(mountedNode, mountedNode)
-    } else {
-      const child = vnode.componentInstance = createComponentInstanceForVnode(
-        vnode,
-        activeInstance
-      )
-      child.$mount(hydrating ? vnode.elm : undefined, hydrating)
-    }
-  },
-  // 其他钩子
-  prepatch () {},
-  insert () {},
-  destroy () {}
-}
-
-var hooksToMerge = Object.keys(componentVNodeHooks)
-
-function installComponentHooks (data) {
-  const hooks = data.hook || (data.hook = {})
-  for (let i = 0; i < hooksToMerge.length; i++) {
-    const key = hooksToMerge[i]
-    const existing = hooks[key]
-    const toMerge = componentVNodeHooks[key]
-    if (existing !== toMerge && !(existing && existing._merged)) {
-      hooks[key] = existing ? mergeHook(toMerge, existing) : toMerge
-    }
-  }
-}
 ```
+
+然后调用`$mount`方法挂载子组件。
