docs: init :createComponentInstanceForVnode

--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -36,7 +36,8 @@ function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
 }
 ```
 
-在这里，组件类型的vnode在被创建时安装的`init`钩子可以得到执行：
+### init钩子
+`createComponent`方法执行时，组件类型的vnode在被创建时安装的`init`钩子可以得到执行：
 ```js 
 function init (vnode, hydrating) {
   if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
@@ -69,4 +70,6 @@ function createComponentInstanceForVnode (vnode, parent) {
 }
 ```
 
-然后调用`$mount`方法挂载子组件。
+`vnode.componentOptions.Ctor`对应的是组件的构造函数，它是在创建组件vnode是写入`vnode.componentOptions`的。
+
+这样对于组件vnode，`vnode.componentInstance`指向了对应的组件实例。紧接着是调用`vm.$mount`方法挂载子组件。
