--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -1,4 +1,4 @@
-通过之前的源码分析，现在我们知道，通过`new Vue`创建Vue实例的场景有两种：一种是手动调用去实例化一个全局的`vm`，另一种是组件内部实例化子组件`vm`。
+通过之前的源码分析，现在我们知道，通过`new Vue`创建Vue实例的场景有两种：一种是手动调用去实例化一个全局的`vm`，另一种是组件内部实例化子组件实例。
 
 无论哪种场景，在实例化`vm`时都会都会走到`vm._init(options)`的逻辑中去，在`1.2-Vue的定义`中提到过这一点，`_init`中有一段合并`options`的逻辑：
 ```js
