docs: 组件实例的options

--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -70,6 +70,13 @@ function createComponentInstanceForVnode (vnode, parent) {
 }
 ```
 
-`vnode.componentOptions.Ctor`对应的是组件的构造函数，它是在创建组件vnode是写入`vnode.componentOptions`的。
+`vnode.componentOptions.Ctor`对应的是组件的构造函数，它是在创建组件vnode时写入`vnode.componentOptions`的。另外需要注意的是，实例化组件实例的参数`options`：
+```js
+{
+  _isComponent: true,
+  _parentVnode: vnode,
+  parent: parent
+}
+```
 
 这样对于组件vnode，`vnode.componentInstance`指向了对应的组件实例。紧接着是调用`vm.$mount`方法挂载子组件。
