--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -1,6 +1,6 @@
 创建完vnode接下来的步骤是`vm._update`——将vnode转化为真实DOM。
 
-回顾`2.3`小节，在分析`update`内部调用的`createElm`方法(`vm._update -> vm.__patch__ -> createPatchFunction -> patch -> createElm`)的内部逻辑中，第一步就是尝试处理组件vnode：
+回顾`2.3`小节，在分析`update`内部调用的`createElm`方法(`vm._update -> vm.__patch__ -> createPatchFunction -> patch -> createElm`)的内部逻辑中：
 ```js
 function createElm () {
   // 尝试处理组件vnode
@@ -13,7 +13,7 @@ function createElm () {
 }
 ```
 
-当时跳过了对于组件的`patch`逻辑的分析：
+第一步就是尝试处理组件vnode对应的DOM，当时跳过了此处`createComponent`的分析：
 ```js
 function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
   // 组件vnode.data不为空
@@ -37,7 +37,7 @@ function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
 ```
 
 ### init钩子
-`createComponent`方法执行时，组件类型的vnode在被创建时安装的`init`钩子可以得到执行：
+回顾上一小节，组件类型的vnode在被创建时安装了`init`钩子，所以此时可以得到执行：
 ```js 
 function init (vnode, hydrating) {
   if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
@@ -53,7 +53,7 @@ function init (vnode, hydrating) {
 }
 ```
 
-`init`钩子的内部逻辑很简单：`keepAlive`组件通过执行`prepatch`钩子（这里不做展开），而对于普通的组件vnode，通过`createComponentInstanceForVnode`创建一个**对应的Vue实例**：
+`init`钩子的内部逻辑很简单（暂不考虑`keepAlive`组件的情况），对于普通组件vnode，会先通过`createComponentInstanceForVnode`创建一个**对应的Vue实例**：
 ```js
 function createComponentInstanceForVnode (vnode, parent) {
   var options = {
@@ -70,7 +70,7 @@ function createComponentInstanceForVnode (vnode, parent) {
 }
 ```
 
-`vnode.componentOptions.Ctor`对应的是组件的构造函数，它是在创建组件vnode时写入`vnode.componentOptions`的。另外需要注意的是，实例化组件实例的参数`options`：
+在这里`vnode.componentOptions.Ctor`对应的是组件的构造函数，它是在创建组件vnode时写入`vnode.componentOptions`的。另外需要注意实例化组件实例的参数`options`：
 ```js
 {
   _isComponent: true,
@@ -79,4 +79,8 @@ function createComponentInstanceForVnode (vnode, parent) {
 }
 ```
 
-这样对于组件vnode，`vnode.componentInstance`指向了对应的组件实例。紧接着是调用`vm.$mount`方法挂载子组件。
+`_isComponent`表示创建的Vue实例是一个组件实例，`parent`表示**当前激活的组件实例**。
+
+在通过组件vnode创建对应的组件实例之后，将它赋给`vnode.componentInstance`来保留对组件实例的引用。然后通过调用组件实例的`$mount`方法挂载子组件，关于`$mount`的逻辑就再次回到之前的流程中去。
+
+###
