--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -34,16 +34,16 @@ function initMixin (Vue) {
     // 每个Vue实例都会有一个递增唯一的id标识
     vm._uid = uid++
 
-    // 所有Vue的实例都被标记_isVue = true，它的作用是避免实例被响应系统observe?
+    // 所有Vue的实例都被标记_isVue = true，它的作用是避免实例被响应系统observe（哪些对象应该被observe
     vm._isVue = true
 
     // 对用于初始化实例的options做了一层处理
     if (options && options._isComponent) {
-      // _isComponent 是一个内部选项，在创建组件实例的时候才会生成，值为true
+      // _isComponent表示创建的是组件实例，在3.2小节会再次讲到这一点
       // 因为动态选项合并非常慢，而且没有一个内部组件选项，需要特殊处理?
       initInternalComponent(vm, options)
     } else {
-      // 合并options给vm.$options
+      // 普通实例，合并options给vm.$options
       vm.$options = mergeOptions(
         resolveConstructorOptions(vm.constructor),
         options || {},
